# n8n-autodev-sandbox

./: AGENTS.md  CLAUDE.md  README.md  pyproject.toml  writer-output.txt
.github/ISSUE_TEMPLATE/: auto-dev.md
.github/workflows/: ci.yml  deploy.yml
src/sandbox/: absolute_value.py  addition.py  division.py  farewell.py  hello.py  modulo.py  multiplication.py  rate_limiter.py  subtraction.py  url_shortener.py
tests/: test_absolute_value.py  test_addition.py  test_division.py  test_farewell.py  test_greet.py  test_hello.py  test_modulo.py  test_multiplication.py  test_rate_limiter.py  test_subtraction.py  test_url_shortener.py
